--- a/css/style.css
+++ b/css/style.css
@@ -536,5 +536,11 @@ form label:hover {
   .header .navbar a {
     margin: 1rem 0;
     font-size: 3rem;
+  }
+  .header .navbar #nav-close {
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
   } 
 
