--- a/css/style.css
+++ b/css/style.css
@@ -572,4 +572,9 @@ form {
 @media (max-width: 450px) {
   html {
     font-size: 50%;
+  } .heading {
+    font-size: 3rem;
+  }
+    .input, textarea {
+    width: 70vw !important;
   }
